# fancy

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PKGBUILD  README.md  USAGE.md  cliff.toml  codecov.yml  debug.html  deny.toml  fan-configuration.html  fancy.7.md  fancy.spec.rpkg  index.html  introduction.html  models.html  print.html  release.sh  rpkg.conf  rpkg.macros  searchindex.js  searchindex.json
.github/workflows/: book.yml  check.yml  cli-release.yml  configs.yml  release.yml  service-release.yml  test.yml
book/: .gitignore  book.toml  build_supported_list.sh
book/src/: SUMMARY.md  debug.md  fan-configuration.md  introduction.md  models.md
book/src/man/: fancy.1.md  fancy.7.md  fancyd.8.md
book/src/service/: README.md  configuration.md
cli/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  build.rs
cli/.github/workflows/: update.yml
cli/.rpm/: fancy-cli.spec
cli/debian/: README  changelog  control  copyright  manpage.1
cli/extra/: fancy.1.md
cli/src/: app.rs  interfaces.rs  main.rs
debian/: changelog  control  copyright  fancy.lintian-overrides  manpages  rules
gui/: .eslintrc.cjs  .gitignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.misc.json  vite.config.ts
gui/src/: App.svelte  actions.ts  app.css  error.ts  fancy.glade  fancy.glade~  interfaces.rs  main.rs  main.ts  props.ts  proxy.rs  stores.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: cmd.rs  error.rs  interface.rs  main.rs  state.rs
gui/src-tauri/src/cmd/: dbus.rs  misc.rs  mod.rs
gui/src/assets/: mdi.css
gui/src/components/: ChildHeader.svelte  ConfigHeader.svelte  DefaultButton.svelte  ErrorBanner.svelte  InputUnit.svelte  RangeInput.svelte  Sidebar.svelte  Switch.svelte  Tile.svelte  TilesGroup.svelte  WarningBanner.svelte
gui/src/components/editor/: FanConfig.svelte  FanConfigCard.svelte
gui/src/stores/: config.ts  error.ts  props.ts
gui/src/stores/editor/: basic.ts  fans.ts
gui/src/styles/: main.css
gui/src/views/: ConfigChooser.svelte  ConfigDetails.svelte  Dashboard.svelte  Editor.svelte  Settings.svelte
gui/src/views/editor/: Basic.svelte  Fans.svelte
gui/src/views/editor/fans/: FanConfig.svelte  Threshold.svelte
gui/src/widgets/: config_panel.rs  fan_speed.rs  mod.rs
interfaces/: README.md  fancy.xml
man/: fancy.1.html  fancyd.8.html
nbfc/: .gitignore  Cargo.toml  build.rs  nbfc_configs
nbfc/src/: lib.rs
nbfc/ts-types/: package-lock.json  package.json  pnpm-lock.yaml
nbfc_configs/: README.md
prober/: Cargo.toml
prober/src/: main.rs
service/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PKGBUILD  README.md  build.rs  configuration.html  fancy-service.spec.rpkg  index.html  rpkg.macros
service/.github/workflows/: update.yml
service/.rpm/: com.musikid.fancy.conf  configs  fancy-service.spec  fancy-sleep.service  fancy_dbus.service
service/debian/: README  changelog  control  copyright  manpage.1  rules
service/extra/: com.musikid.fancy.conf  fancy.service  fancyd.8.md
service/nbfc_configs/: README.md
service/nbfc_configs/.github/workflows/: configs.yml
service/src/: cleaner.rs  config.rs  constants.rs  loader.rs  main.rs  nbfc.rs  state.rs  temp.rs
service/src/bus/: connection.rs  interfaces.rs  mod.rs
service/src/config/: mod.rs  nbfc_control.rs  service.rs
service/src/dbus/: connection.rs  interfaces.rs
service/src/ec_control/: ec_manager.rs  ec_rw.rs  mod.rs  raw_port.rs  read.rs  write.rs
service/tests/follow/json/: valid_json.json
service/tests/follow/xml/: valid_xml.xml
service/tests/not_follow/: not_complete_config.json
