[package]
name = "fancy-cli"
version = "0.4.0"
authors = ["Musikid <musikid@outlook.com>"]
edition = "2018"
description = """This package provides the CLI for Fancy, a set of software to control laptop fans."""
license = "MPL-2.0"

[dependencies]
clap = "2.33.0"
dbus = "0.9.0"
bcmp = "0.4.1"
anyhow = "1.0.44"

[build-dependencies]
dbus-codegen = "0.9.0"

[package.metadata.deb]
depends = "$auto, dbus"
section = "utils"
priority = "optional"
assets = [
    ["../target/release/fancy-cli", "usr/bin/fancy", "755"],
]

[package.metadata.rpm]
package = "fancy-cli"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
fancy-cli = { path = "/usr/bin/fancy" }
