[package]
name = "fancy-gui"
version = "0.1.0"
authors = ["MusiKid <musikid@outlook.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
gtk = "0.9.2"
relm = "0.21.0"
relm-derive = "0.21.0"
zbus = "2.0.0-beta.2"
smol = "1.2.5"
zvariant = "2"
flume = "0.10.2"
gio = "0.9.1"
glib = "0.10.3"
futures = "0.3.13"
gdk = "0.13.2"
libhandy = "0.7.1"
