[package]
name = "fancy-service"
version = "0.5.0"
authors = ["Musikid <musikid@outlook.com>"]
edition = "2021"
description = """This package provides the service for Fancy, a set of software to control laptop fans."""
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
toml = "0.5.6"
quick-xml = { version = "0.22.0", features = ["serialize"] }
snafu = "0.6.8"
# TODO: update psutil once fix is merged: https://github.com/rust-psutil/rust-psutil/pull/93
# psutil = { version = "3.2.0" }
psutil = { git = "https://github.com/sigp/rust-psutil", rev = "3b42f01273b446128b572aa4fdb9b08f5da5f1d7", default-features = false, features = ["sensors"] }
once_cell = "1.4.0"
dbus = "0.9.1"
dbus-tree = "0.9.0"
signal-hook = "0.3.6"
log = "0.4.11"
pretty_env_logger = "0.4.0"
nbfc-config = { path = "../nbfc" }

[dev-dependencies]
rand = "0.8.3"
is_sorted = "0.1.1"

[build-dependencies]
dbus-codegen = "0.9.1"

# All these metadatas are used for testing
# [package.metadata.deb]
# depends = "$auto, systemd, dbus"
# section = "utils"
# priority = "optional"
# assets = [
#     ["../target/release/fancy-service", "usr/sbin/fancyd", "744"],
#     ["extra/fancy.service", "etc/systemd/system/", "644"],
#     ["extra/fancy-sleep.service", "etc/systemd/system/", "644"],
#     ["extra/fancy_dbus.service", "/usr/share/dbus-1/services/com.musikid.fancy.service", "644"],
#     ["extra/configs/*", "etc/fancy/configs/", "644"],
#     ["extra/com.musikid.fancy.conf", "/etc/dbus-1/system.d/", "644"]
# ]
#
# [package.metadata.rpm]
# package = "fancy-service"
#
# [package.metadata.rpm.cargo]
# buildflags = ["--release"]
#
# [package.metadata.rpm.build_hooks]
# strip = ["--strip-all", "../target/release/fancy-service"]
#
# [package.metadata.rpm.targets]
# fancy-service = { path = "/usr/sbin/fancyd" }
#
# [package.metadata.rpm.files]
# "fancy.service" = { path = "/usr/lib/systemd/system/fancy.service" }
# "fancy-sleep.service" = { path = "/usr/lib/systemd/system/fancy-sleep.service" }
# "fancy_dbus.service" = { path = "/usr/share/dbus-1/services/com.musikid.fancy.service" }
# configs = { path = "/etc/fancy/configs" }
# "com.musikid.fancy.conf" = { path = "/etc/dbus-1/system.d/com.musikid.fancy.conf" }
