[package]
name = "fancy-service"
version = "0.7.3"
authors = ["Musikid <musikid@outlook.com>"]
edition = "2021"
description = """This package provides the service for Fancy, a set of software to control laptop fans."""
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
toml = "0.5.6"
quick-xml = { version = "0.22.0", features = ["serialize"] }
snafu = "0.7.0"
once_cell = "1.4.0"
nbfc-config = { path = "../nbfc" }
phf = { version = "0.10.0", features = ["macros"] }
serde_json = "1.0.69"
zbus = "2.0.0"
async-std = "1.10.0"
smol = "1.2.5"
async-trait = "0.1.52"
futures = "0.3.19"
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.13"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
rand = "0.8.3"
is_sorted = "0.1.1"
rstest = "0.12.0"
rayon = "1.5.1"

[features]

# All these metadatas are used for testing
# [package.metadata.deb]
# depends = "$auto, systemd, dbus"
# section = "utils"
# priority = "optional"
# assets = [
#     ["../target/release/fancy-service", "usr/sbin/fancyd", "744"],
#     ["extra/fancy.service", "etc/systemd/system/", "644"],
#     ["extra/fancy-sleep.service", "etc/systemd/system/", "644"],
#     ["extra/fancy_dbus.service", "/usr/share/dbus-1/services/com.musikid.fancy.service", "644"],
#     ["extra/configs/*", "etc/fancy/configs/", "644"],
#     ["extra/com.musikid.fancy.conf", "/etc/dbus-1/system.d/", "644"]
# ]
#
# [package.metadata.rpm]
# package = "fancy-service"
#
# [package.metadata.rpm.cargo]
# buildflags = ["--release"]
#
# [package.metadata.rpm.build_hooks]
# strip = ["--strip-all", "../target/release/fancy-service"]
#
# [package.metadata.rpm.targets]
# fancy-service = { path = "/usr/sbin/fancyd" }
#
# [package.metadata.rpm.files]
# "fancy.service" = { path = "/usr/lib/systemd/system/fancy.service" }
# "fancy-sleep.service" = { path = "/usr/lib/systemd/system/fancy-sleep.service" }
# "fancy_dbus.service" = { path = "/usr/share/dbus-1/services/com.musikid.fancy.service" }
# configs = { path = "/etc/fancy/configs" }
# "com.musikid.fancy.conf" = { path = "/etc/dbus-1/system.d/com.musikid.fancy.conf" }
