[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["musikid <musikid@outlook.com>"]
license = "MPL-2.0"
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
zbus = "2.0.0-beta.6"
nbfc-config = { path = "../../nbfc" }
flume = "0.10.9"
futures = "0.3.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
