[package]
name = "fancy-gui"
version = "0.4.0"
description = "GUI for Fancy"
authors = ["musikid <musikid@outlook.com>"]
license = "MPL-2.0"
repository = ""
default-run = "fancy-gui"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["notification-all"] }
zbus = "2.0.0-beta.7"
nbfc-config = { path = "../../nbfc" }
flume = "0.10.9"
futures = "0.3.17"
thiserror = "1.0.29"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.11.0", features = ["fs"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
once_cell = "1.8.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
